# cobito-crew

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONCEPTS.md  DECISIONS.md  GLOSSARY.md  MISSION.md  OPERATIONS.md  README.md  ROADMAP.md  pyproject.toml
docs/advances/examples/phase0/: 001-adopt-advance-template.md
docs/advances/templates/: phase0.md
docs/governance/: PHASE0.md
src/cobito_crew/: advance_template.py  cli.py  storage.py
